src/test/ui/const-generics/defaults/generic-expr-default-mismatched-types.stderr
error[E0308]: mismatched types
  --> $DIR/generic-expr-default-mismatched-types.rs:12:5
   |
LL |     Foo::<N, { N + 2 }>
   |     ^^^^^^^^^^^^^^^^^^^ expected `{ N + 1 }`, found `{ N + 2 }`
   |
   = note: expected constant `{ N + 1 }`
              found constant `{ N + 2 }`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
